# weaving

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build-website.yml  deploy.yml  rust.yml  weaving.yml
crates/weaver/: Cargo.toml
crates/weaver/src/: config.rs  document.rs  document_toc.rs  lib.rs  partial.rs  routes.rs  slugify.rs  template.rs
crates/weaver/src/feed_templates/: sitemap.xml.liquid
crates/weaver/src/filters/: date_format.rs  has_key.rs  json.rs  mod.rs  raw_html.rs
crates/weaver/src/renderers/: globals.rs  mod.rs
crates/weaver/src/tasks/: atom_feed_task.rs  clean_build_dir.rs  common.rs  mod.rs  public_copy_task.rs  sitemap_task.rs  well_known_copy_task.rs
crates/weaver/src/templates/: atom.xml.liquid  sitemap.xml.liquid
crates/weaver/test_fixtures/config/custom_config/: weaving.toml
crates/weaver/test_fixtures/config/full_config/: weaving.toml
crates/weaver/test_fixtures/config/partial_config/: weaving.toml
crates/weaver/test_fixtures/example/content/: with_headings (Copy 506).md
crates/weaver/test_fixtures/example/site/with_headings (Copy 383)/: index.html
crates/weaver/test_fixtures/example/templates/: default.liquid
crates/weaver/test_fixtures/liquid/: default.liquid  template.liquid
crates/weaver/test_fixtures/markdown/: full_frontmatter.md  missing_frontmatter_keys.md  user_metadata.md  with_headings.md
crates/weaver/tests/custom_config/: weaving.toml
crates/weaving/: Cargo.toml  README.md
crates/weaving/assets/: inject-page.js  service-worker.js
crates/weaving/src/: main.rs  routes.rs  template.rs
github-pages/content/: index.md
github-pages/templates/: default.liquid
