[package]
name = "weaver"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive", "alloc"] }
markdown = "1.0.0"
pretty_assertions = "1.4.1"
glob = "0.3.2"
liquid = "0.26.11"
tokio = { version = "1.45.0", features = ["sync", "rt", "macros"] }
futures = "0.3.31"
gray_matter = "0.2.8"
serde_json = "1.0.140"
slug = "0.1.6"
