[package]
name = "weaver"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"
description = "static site generator as a library, markdown and liquid in, HTML out."
keywords = ["static", "site", "generator", "library", "no-config"]
categories = ["static-site-generation", "blog-framework"]
exclude = ["./test_fixtures"]
repository = "https://github.com/davemackintosh/weaving/"

[dependencies]
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive", "alloc"] }
markdown = "1.0.0"
pretty_assertions = "1.4.1"
glob = "0.3.2"
liquid-core = "0.26.11"
liquid = "0.26.11"
tokio = { version = "1.45.0", features = ["sync", "rt", "macros", "fs"] }
futures = "0.3.31"
gray_matter = "0.2.8"
slug = "0.1.6"
async-trait = "0.1.88"
