[package]
name = "weaver-lib"
version = "0.2.7"
edition = "2024"
license-file = "../../LICENSE"
description = "static site generator as a library, markdown and liquid in, HTML out."
keywords = ["static", "site", "generator", "library", "no-config"]
categories = ["command-line-utilities", "web-programming"]
exclude = ["./test_fixtures"]
repository = "https://github.com/davemackintosh/weaving/"

[dependencies]
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive", "alloc"] }
markdown = "1.0.0"
comrak = "0.39"
pretty_assertions = "1.4.1"
glob = "0.3.2"
liquid-core = "0.26.11"
liquid = "0.26.11"
regex = "1.11.1"
tokio = { version = "1.45.0", features = [
	"sync",
	"rt",
	"rt-multi-thread",
	"macros",
	"fs",
] }
futures = "0.3.31"
gray_matter = "0.2.8"
slug = "0.1.6"
async-trait = "0.1.88"
owo-colors = "4.2.1"
chrono = { version = "0.4.41", features = ["serde"] }
