[package]
name = "weaving"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"
description = "static site generator weaving binary"
keywords = ["static", "site", "generator", "no-config"]
categories = ["static-site-generation", "blog-framework"]
repository = "https://github.com/davemackintosh/weaving/"

[dependencies]
weaver = { path = "../weaver" }
tokio = { version = "1.45.0", features = [
	"sync",
	"rt",
	"rt-multi-thread",
	"macros",
] }
clap = { version = "4.5.38", features = ["derive"] }
resolve-path = "0.1.0"
