[package]
name = "weaving"
version = "0.2.6"
edition = "2024"
license-file = "../../LICENSE"
description = "static site generator weaving binary"
keywords = ["static", "site", "generator", "no-config"]
categories = ["command-line-utilities", "web-programming"]
repository = "https://github.com/davemackintosh/weaving/"

[dependencies]
weaver-lib = { path = "../weaver", version = "0.2.5" }
tokio = { version = "1.45.0", features = [
	"sync",
	"rt",
	"rt-multi-thread",
	"macros",
	"fs",
	"time",
] }
clap = { version = "4.5.38", features = ["derive"] }
resolve-path = "0.1.0"
tempfile = "3.20.0"
walkdir = "2.5.0"
rouille = "3.6.2"
mime_guess = "2.0.5"
notify = "8.0.0"
owo-colors = "4.2.1"
futures = "0.3.31"
crossbeam-channel = "0.5.15"
bindet = "0.3.2"
